<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyIndoorLocation</string>
    <string name="action_settings">Settings</string>
    <string name="log_text"></string>
    <string name="add_rssi_pairs"></string>
    <string name="record_btn">记录</string>
    <string name="match_btn">匹配</string>
    <string name="history_txt">历史记录</string>
    <string name="result_txt">匹配结果</string>

</resources>