<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_shape"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myindoorlocation.MainActivity" >

    <TextView
        android:id="@+id/logTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_text" />

    <TextView
        android:id="@+id/AddressRSSI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_rssi_pairs" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/recordBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_bckgrd"
            android:clickable="true"
            android:minHeight="0dp"
            android:onClick="recordPos"
            android:padding="5dp"
            android:text="@string/record_btn"
            android:textColor="#727272"
            android:textSize="30sp" />

        <Button
            android:id="@+id/matchBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_bckgrd"
            android:clickable="true"
            android:minHeight="0dp"
            android:onClick="matchPos"
            android:padding="5dp"
            android:text="@string/match_btn"
            android:textColor="#727272"
            android:textSize="30sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/scrollshape"
        android:padding="10dp" >

        <TextView
            android:id="@+id/historyTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/history_txt" />
    </ScrollView>

    <ScrollView
        android:id="@+id/resultScrollView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/scrollshape"
        android:padding="10dp"
        android:scrollbarSize="3dp"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/resultTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/result_txt" />
    </ScrollView>

</LinearLayout>